모집 글 작성 페이지 - 이미지 업로드 취소(X)버튼 추가

--- a/wego-web/src/main/webapp/resources/css/main.css
+++ b/wego-web/src/main/webapp/resources/css/main.css
@@ -30,7 +30,7 @@ section div>h2 {
 	scroll-behavior: auto;
 }
 
-.mountain-name, .recruit-title, .review-title {
+.recruit-title, .review-title {
 	display: -webkit-box;
 	overflow: hidden;
 	text-overflow: ellipsis;
