--- a/wego-web/src/main/webapp/resources/css/main.css
+++ b/wego-web/src/main/webapp/resources/css/main.css
@@ -174,93 +174,83 @@ to {
 }
 /* mountain-info */
 .mountain-item {
-	width: 200px;
-	height: 330px;
-	padding: 15px;
-	border: 0;
-	border-radius: 10px;
-	box-shadow: 0 5px 5px rgba(0, 0, 0, 0.25), 0 3px 3px rgba(0, 0, 0, 0.22);
-	background-color: #fff;
-	text-align: center;
-	display: grid;
-	grid-template-rows: 165px 45px 90px 30px;
-	grid-template-columns: repeat(3, 1fr);
-	grid-template-areas: "photo       photo   photo" ". mountname ."
-		"contents  contents  contents" "like        .     .";
-	align-items: center;
-	justify-items: center;
+    width: 200px;
+    height: 330px;
+    padding: 15px;
+    border: 0;
+    border-radius: 10px;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.25), 0 3px 3px rgba(0, 0, 0, 0.22);
+
+    background-color: #fff;
+
+    text-align: center;
+
+    display: grid;
+    grid-template-rows: 165px 45px 90px 30px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas:
+        "mountainImg mountainImg mountainImg"
+        ". mountainName ."
+        "mountainContents mountainContents mountainContents"
+        "mountainLike . .";
+
+    align-items: center;
+    justify-items: center;  
+}
+.mountain-item > p {
+    margin: 0;
+    justify-self: left;
+  }
+.mountain-item > .mountain-img {
+    grid-area: mountainImg;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+.mountain-item > .mountain-name {
+    grid-area: mountainName;
+
+    font-size: 20px;
+    margin: 0;
+}
+.mountain-item > .mountain-contents {
+    grid-area: mountainContents;
+
+    width: 195px;
+    
+    font-size: 15px;
+
+    text-align: left;
+
+    white-space: nowrap;
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+}
+.mountain-item > .mountain-like {
+    grid-area: mountainLike;
+    text-align: left;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+
+    justify-self: left;
+}
+.mountain-like > .favorite {
+    width: 30px;
+    height: 30px;
+    border: 0;
+    background: url(../svg/favorite.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+.mountain-like > .favorite-count {
+    font-size: 12px;
 }
 
-.mountain-img {
-	grid-area: photo;
-	width: 150px;
-	height: 150px;
-	border-radius: 50%;
-}
-
-.mountain-name {
-	grid-area: mountname;
-	margin: 0;
-	font-size: 20px;
-}
-
-.contents {
-	width: 195px;
-	margin: 0 0 0 5px;
-	font-size: 15px;
-	grid-area: contents;
-	text-align: left;
-	white-space: nowrap;
-	display: -webkit-box;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: normal;
-	-webkit-line-clamp: 3;
-	-webkit-box-orient: vertical;
-}
-
-.mountain-like {
-	grid-area: like;
-	text-align: left;
-	display: flex;
-	align-items: center;
-	gap: 5px;
-}
-
-.favorite {
-	width: 30px;
-	height: 30px;
-	border: 0;
-	background: url(../svg/favorite.svg);
-	background-repeat: no-repeat;
-	background-size: contain;
-}
-
-.favorite-count {
-	font-size: 12px;
-}
-
-#title {
-	margin: 10px auto;
-}
-
-#text {
-	display: -webkit-box;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: normal;
-	-webkit-line-clamp: 3;
-	-webkit-box-orient: vertical;
-}
-
-.favorite {
-	width: 30px;
-	height: 30px;
-	border: 0;
-	background: url(../svg/favorite.svg);
-	background-repeat: no-repeat;
-	background-size: contain;
-}
 /* recruit */
 .recruit-item {
 	width: 200px;
