--- a/wego-web/src/main/webapp/resources/css/review-write.css
+++ b/wego-web/src/main/webapp/resources/css/review-write.css
@@ -77,6 +77,9 @@ label[for="title"] {
   overflow: scroll;
   overflow-x: hidden;
 }
+#contents img {
+  width: 100%;
+}
 .buttons {
   display: flex;
   justify-content: right;
